# ace-compiler

./: Dockerfile  LICENSE.TXT  README.md  requirements.txt
air-infra/: .gitignore  CMakeLists.txt  README.md  cloc.sh  config.in
air-infra/base/: CMakeLists.txt
air-infra/base/example/: eg_meta_info.cxx
air-infra/base/src/: arena.cxx  container.cxx  meta_info.cxx  node.cxx  node_data.cxx  st.cxx  st_attr.cxx  st_const.cxx  st_data.cxx  st_iter.cxx  st_misc.cxx  st_sym.cxx  st_type.cxx  targ_info.cxx
air-infra/base/unittest/: test_airbase.cxx  ut_const.cxx  ut_container.cxx  ut_meta_info.cxx  ut_st.cxx
air-infra/benchmark/: CMakeLists.txt
air-infra/benchmark/src/: bm_air_01.cxx
air-infra/cg/: CMakeLists.txt
air-infra/cg/doc/: README.md
air-infra/cg/example/: eg_aircg_01.cxx
air-infra/cg/src/: cg.cxx
air-infra/cg/test/: test_aircg_01.cxx
air-infra/cg/unittest/: ut_cg.cxx
air-infra/cmake/: external_doxygen.cmake  external_errmsg.cmake  external_jsoncpp.cmake  external_regex.cmake  external_testdep.cmake
air-infra/core/: CMakeLists.txt
air-infra/core/example/: eg_aircore_ir2c.cxx
air-infra/core/src/: opcode.cxx
air-infra/devtools/: README.md  pylintrc  regex.patch
air-infra/devtools/err_msg/: err_msg.py  err_msg.yml  user_define.yml
air-infra/devtools/yml_parser/: master.inc  option.yml  option_generator.py
air-infra/doc/: AIRContainer.md  AIRType.md  Attribute.md  BUILD.md  CommandLineOption.md  Doxyfile.in  IRTraverse.md  MemoryPool.md  PassManager.md  basic.h
air-infra/driver/: CMakeLists.txt
air-infra/driver/example/: eg_airdriver_01.cxx  eg_airdriver_02.cxx  eg_nndriver_nonstandalone.cxx  eg_nndriver_standalone.cxx
air-infra/driver/include/: config_nn2a.inc  nn2a_driver.h
air-infra/driver/src/: common_config.cxx  driver.cxx  driver_ctx.cxx  global_config.cxx  nn2a_driver.cxx
air-infra/driver/test/: test_airdriver_01.cxx
air-infra/driver/unittest/: ut_driver.cxx
air-infra/opt/: CMakeLists.txt
air-infra/opt/example/: eg_airopt_01.cxx
air-infra/opt/include/: ssa_rename_ctx.h  ssa_rename_handler.h  ssa_rename_stack.h  ssa_simple_builder.h  ssa_verify_ctx.h
air-infra/opt/src/: opt.cxx  ssa_build.cxx  ssa_container.cxx  ssa_node.cxx  ssa_node_list.cxx  ssa_st.cxx  ssa_verify.cxx
air-infra/opt/test/: test_ssa_build.cxx
air-infra/opt/unittest/: ut_opt.cxx
air-infra/plugin/: CMakeLists.txt
air-infra/plugin/example/: eg_airplugin.cxx
air-infra/plugin/src/: pyrun.cxx
air-infra/plugin/unittest/: pybase.py  pyrun.cxx
air-infra/test/: CMakeLists.txt  data_avhc_air.yml  test_air.cxx
air-infra/util/: CMakeLists.txt
air-infra/util/doc/: messg.md  timing.md
air-infra/util/example/: eg_airutil_debug.cxx  eg_airutil_msg.cxx  eg_airutil_perf.cxx  eg_airutil_timing.cxx
air-infra/util/src/: elf_hdr.cxx  error.cxx  file_map.cxx  mem_util.cxx  option.cxx  perf.cxx  timing.cxx
air-infra/util/test/: air_assert.cxx  air_debug.cxx  air_trace.cxx  cmplr_assert.cxx  cmplr_err_msg.cxx  cmplr_usr_msg.cxx  cmplr_warn_msg.cxx
air-infra/util/unittest/: air_allocator.cxx  align.cxx  arena.cxx  mem_allocator.cxx  mem_block.cxx  mem_id_pool.cxx  mem_pool.cxx  option.cxx  ptr_util.cxx  strtab.cxx  ut_log.cxx  ut_timing.cxx  ut_uuid.cxx
fhe-cmplr/: .gitignore  CMakeLists.txt  README.md
fhe-cmplr/benchmark/: CMakeLists.txt
fhe-cmplr/cg/: CMakeLists.txt
fhe-cmplr/cg/src/: cg.cxx
fhe-cmplr/cg/unittest/: ut_cg.cxx
fhe-cmplr/ckks/: CMakeLists.txt
fhe-cmplr/ckks/include/: scale_manager.h
fhe-cmplr/ckks/src/: ckks.cxx  ckks_gen.cxx  ckks_opcode.cxx  config.cxx  pass.cxx  scale_manager.cxx
fhe-cmplr/ckks/unittest/: test_ckks_opcodes.cxx  test_vector2ckks.cxx  ut_ckks.cxx
fhe-cmplr/cmake/: external_doxgen.cmake  external_extralib.cmake  external_regex.cmake  external_testdep.cmake
fhe-cmplr/core/: CMakeLists.txt
fhe-cmplr/core/src/: ctx_param_ana.cxx  lower_ctx.cxx  rt_data_util.cxx  scheme_info.cxx  scheme_info_ana.cxx  scheme_info_config.cxx
fhe-cmplr/core/test/: rt_data_dump.cxx
fhe-cmplr/core/unittest/: ut_core.cxx  ut_rt_data_writer.cxx
fhe-cmplr/devtools/: check_coding_style.py
fhe-cmplr/doc/: BUILD.md  Doxyfile.in
fhe-cmplr/driver/: CMakeLists.txt
fhe-cmplr/driver/example/: eg_fhedriver_01.cxx
fhe-cmplr/driver/src/: driver.cxx  fhe_cmplr.cxx  onnx_fhe_cmplr.cxx
fhe-cmplr/driver/test/: e2e_driver.h  e2e_driver.inc  test_fhedriver_01.cxx  test_fherot_01.cxx
fhe-cmplr/opt/: CMakeLists.txt
fhe-cmplr/opt/test/: test_fheopt_01.cxx
fhe-cmplr/opt/unittest/: ut_opt.cxx
fhe-cmplr/poly/: CMakeLists.txt
fhe-cmplr/poly/include/: ckks2poly.h  poly_ir_gen.h
fhe-cmplr/poly/src/: ckks2poly.cxx  config.cxx  opcode.cxx  pass.cxx  poly2c_config.cxx  poly2c_driver.cxx  poly2c_mfree.cxx  poly2c_pass.cxx  poly_driver.cxx  poly_ir_gen.cxx
fhe-cmplr/poly/test/: gen_ckks_ir.h  gen_expect_data.h  test_fhepoly_add_float.cxx  test_fhepoly_mul_float.cxx  test_fhepoly_relin_01.cxx  test_fhepoly_relin_02.cxx  test_fhepoly_rotate_01.cxx  test_fhepoly_rotate_02.cxx  test_fhepoly_rotate_03.cxx
fhe-cmplr/poly/unittest/: ut_ckks2poly.cxx  ut_opcode.cxx
fhe-cmplr/rtlib/: CMakeLists.txt
fhe-cmplr/rtlib/ant/: CMakeLists.txt
fhe-cmplr/rtlib/openfhe/: CMakeLists.txt
fhe-cmplr/rtlib/seal/: CMakeLists.txt
fhe-cmplr/sihe/: CMakeLists.txt
fhe-cmplr/sihe/src/: config.cxx  (+6 more)
fhe-cmplr/test/: CMakeLists.txt  data_avhc_fhe.yml  test_fhe_cmplr.sh
fhe-cmplr/util/: CMakeLists.txt
nn-addon/: CMakeLists.txt  README.md  cloc.sh
nn-addon/benchmark/: CMakeLists.txt
nn-addon/cmake/: external_doxygen.cmake  external_protogen.cmake  external_regex.cmake  external_testdep.cmake
nn-addon/core/: CMakeLists.txt
nn-addon/devtools/: .clang-format  .clang-tidy
nn-addon/doc/: BUILD.md  Doxyfile.in  protobuf on macOS.md
nn-addon/driver/: CMakeLists.txt
nn-addon/llama/: CMakeLists.txt
nn-addon/onnx/: CMakeLists.txt
nn-addon/onnx2air/: CMakeLists.txt
nn-addon/opt/: CMakeLists.txt
nn-addon/test/: CMakeLists.txt  data_avhc_nn.yml  test_onnx_cmplr.sh
nn-addon/util/: CMakeLists.txt
nn-addon/vector/: CMakeLists.txt
(+437 files in other folders)
