file (GLOB_RECURSE AIRDRIVER_SRC_FILES CONFIGURE_DEPENDS src/*.cxx)

set (AIRDRIVER_INCLUDE_DIRS "")
list (APPEND AIRDRIVER_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
list (APPEND AIRDRIVER_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/include")
include_directories (${AIRDRIVER_INCLUDE_DIRS})
set (AIRDRIVER_INCLUDE_DIRS "${AIRDRIVER_INCLUDE_DIRS}" CACHE INTERNAL "")

add_library (airdriver_obj OBJECT ${AIRDRIVER_SRC_FILES})

set_property (TARGET airdriver_obj PROPERTY POSITION_INDEPENDENT_CODE 1)

if (BUILD_STATIC)
	add_dependencies (airdriver_obj AIRutil AIRbase AIRcore)
	add_library (AIRdriver STATIC $<TARGET_OBJECTS:airdriver_obj>)
	set_property (TARGET AIRdriver PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
	install (TARGETS AIRdriver EXPORT AIRTargets DESTINATION lib)
endif ()

add_custom_target (airdriver_all)

if (BUILD_STATIC)
	set (DRIVERLIBS ${DRIVERLIBS} PUBLIC AIRutil AIRdriver AIRbase)
	add_dependencies (airdriver_all AIRdriver)
endif()

set (AIRDRIVER_UTAPP "")
if (BUILD_UNITTEST)
	file (GLOB AIRDRIVER_UNITTEST_SRC_FILES CONFIGURE_DEPENDS unittest/*.cxx)
	set (AIRDRIVER_UNITTEST_SRC_FILES ${AIRDRIVER_UNITTEST_SRC_FILES})
	add_executable (ut_airdriver ${AIRDRIVER_UNITTEST_SRC_FILES} ${UNITTESTMAIN})
	set_property (TARGET ut_airdriver PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/unittest)
	target_link_libraries (ut_airdriver ${AIR_UTLIBS})
	set (AIRDRIVER_UTAPP ${AIRDRIVER_UTAPP} ut_airdriver)

	add_dependencies (airdriver_all ut_airdriver)

	add_custom_command (OUTPUT run_airdriver_utapps WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_airdriver)
	add_custom_target (test_airdriver_ut DEPENDS ut_airdriver run_airdriver_utapps)
	add_test( NAME ut_airdriver COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_airdriver)
endif()

set (AIRDRIVER_TESTAPP "")
if (AIR_BUILD_TEST)
	file (GLOB AIRDRIVER_TESTAPP_SRC_FILES CONFIGURE_DEPENDS test/*.cxx)
	foreach (app ${AIRDRIVER_TESTAPP_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test)
		set (AIRDRIVER_TESTAPP ${AIRDRIVER_TESTAPP} ${exe})
		target_link_libraries (${exe} ${AIR_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/test/${exe})
	endforeach ()

	add_custom_target (airdriver_test)
	add_dependencies (airdriver_test ${AIRDRIVER_TESTAPP})
	add_dependencies (airdriver_all airdriver_test)
endif()

set (AIRDRIVER_EGAPP "")
if (AIR_BUILD_EXAMPLE)
	file (GLOB APPDRIVER_EXAMPLE_SRC_FILES CONFIGURE_DEPENDS example/*.cxx)
	foreach (app ${APPDRIVER_EXAMPLE_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/example)
		set (AIRDRIVER_EGAPP ${AIRDRIVER_EGAPP} ${exe})
		target_link_libraries (${exe} ${AIR_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/example/${exe})
	endforeach ()

	add_custom_target (airdriver_example)
	add_dependencies (airdriver_example ${AIRDRIVER_EGAPP})
	add_dependencies (airdriver_all airdriver_example)
endif ()

if (AIR_INSTALL_APP)
	install (TARGETS ${AIRDRIVER_UTAPP} RUNTIME DESTINATION unittest)
	install (TARGETS ${AIRDRIVER_BMAPP} RUNTIME DESTINATION bench)
	install (TARGETS ${AIRDRIVER_TESTAPP} RUNTIME DESTINATION test)
	install (TARGETS ${AIRDRIVER_EGAPP} RUNTIME DESTINATION example)
endif ()