file (GLOB_RECURSE AIROPT_SRC_FILES CONFIGURE_DEPENDS src/*.cxx)

set (AIROPT_INCLUDE_DIRS "")
list (APPEND AIROPT_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include")
list (APPEND AIROPT_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/include")
include_directories (${AIROPT_INCLUDE_DIRS})
set (AIROPT_INCLUDE_DIRS "${AIROPT_INCLUDE_DIRS}" CACHE INTERNAL "")

add_library (airopt_obj OBJECT ${AIROPT_SRC_FILES})

set_property (TARGET airopt_obj PROPERTY POSITION_INDEPENDENT_CODE 1)

if (BUILD_STATIC)
	add_dependencies (airopt_obj AIRutil AIRbase AIRcore)
	add_library (AIRopt STATIC $<TARGET_OBJECTS:airopt_obj>)
	set_property (TARGET AIRopt PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
	install (TARGETS AIRopt EXPORT AIRTargets DESTINATION lib)
endif ()

add_custom_target (airopt_all)

if (BUILD_STATIC)
	set (AIROPT_LIBS ${AIROPT_LIBS} PUBLIC AIRutil AIRbase AIRopt)
	add_dependencies (airopt_all AIRopt)
endif()

set (AIROPT_UTAPP "")
if (BUILD_UNITTEST)
	file (GLOB AIROPT_UNITTEST_SRC_FILES CONFIGURE_DEPENDS unittest/*.cxx)
	set (AIROPT_UNITTEST_SRC_FILES ${AIROPT_UNITTEST_SRC_FILES})
	add_executable (ut_airopt ${AIROPT_UNITTEST_SRC_FILES} ${UNITTESTMAIN})
	set_property (TARGET ut_airopt PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/unittest)
	target_link_libraries (ut_airopt ${AIR_UTLIBS})
	set (AIROPT_UTAPP ${AIROPT_UTAPP} ut_airopt)

	add_dependencies (airopt_all ut_airopt)

	add_custom_command (OUTPUT run_airopt_utapps WORKING_DIRECTORY ${CMAKE_BINARY_DIR} COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_airopt)
	add_custom_target (test_airopt_ut DEPENDS ut_airopt run_airopt_utapps)
	add_test( NAME ut_airopt COMMAND ${CMAKE_BINARY_DIR}/unittest/ut_airopt)
endif()

set (AIROPT_TESTAPP "")
if (AIR_BUILD_TEST)
	file (GLOB AIROPT_TESTAPP_SRC_FILES CONFIGURE_DEPENDS test/*.cxx)
	foreach (app ${AIROPT_TESTAPP_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/test)
		set (AIROPT_TESTAPP ${AIROPT_TESTAPP} ${exe})
		target_link_libraries (${exe} ${AIR_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/test/${exe})
	endforeach ()

	add_custom_target (airopt_test)
	add_dependencies (airopt_test ${AIROPT_TESTAPP})
	add_dependencies (airopt_all airopt_test)
endif()

set (AIROPT_EGAPP "")
if (AIR_BUILD_EXAMPLE)
	file (GLOB AIROPT_EXAMPLE_SRC_FILES CONFIGURE_DEPENDS example/*.cxx)
	foreach (app ${AIROPT_EXAMPLE_SRC_FILES})
		get_filename_component (exe ${app} NAME_WE)
		add_executable (${exe} ${app})
		set_property (TARGET ${exe} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/example)
		set (AIROPT_EGAPP ${AIROPT_EGAPP} ${exe})
		target_link_libraries (${exe} ${AIR_LIBS})
		add_test( NAME ${exe} COMMAND ${CMAKE_BINARY_DIR}/example/${exe})
	endforeach ()

	add_custom_target (airopt_allexample)
	add_dependencies (airopt_allexample ${AIROPT_EGAPP})
	add_dependencies (airopt_all airopt_allexample)
endif ()

if (AIR_INSTALL_APP)
	install (TARGETS ${AIROPT_UTAPP} RUNTIME DESTINATION unittest)
	install (TARGETS ${AIROPT_BMAPP} RUNTIME DESTINATION bench)
	install (TARGETS ${AIROPT_TESTAPP} RUNTIME DESTINATION test)
	install (TARGETS ${AIROPT_EGAPP} RUNTIME DESTINATION example)
endif ()